syntax = "proto3";
package pb;

import "task.proto";

option go_package = "github.com/Remxin/home-life/server/pb";

message AssignTaskRequest {
    string task_id = 1;
    string assignee_id = 2;
}

message AssignTaskResponse {
    Task task = 1;
}